--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Harry Potter Jelszó-generátor</title>
+  <title>Harry Potter Jelszó-generátor by. Kopi</title>
 </head>
 <body>
-  <h1>Harry Potter Jelszó-generátor</h1>
+  <h2>Harry Potter Jelszó-generátor</h2>
+  <h3>by. Kopi</h3>
   <pre id="passwordsOutput"></pre>
 
   <script>
