--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Harry Potter Jelszó-generátor by. Kopi</title>
 </head>
 <body>
-  <h2>Harry Potter Jelszó-generátor</h2>
+  <h2>Harry Potter jelszó-generátor</h2>
   <h3>by. Kopi</h3>
   <pre id="passwordsOutput"></pre>
 
